# s2-example-implementations

./: README.md  docker-compose.yml  rust.code-workspace
battery/: Cargo.toml  Dockerfile  README.md
battery/src/: battery_simulator.rs  main.rs
pv-installation/: Cargo.toml  Dockerfile  README.md
pv-installation/src/: main.rs  pv_simulator_pebc.rs  pv_simulator_simple.rs  solar.csv
