[package]
name = "pv-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
csv = "1.3.1"
eyre = "0.6.12"
s2energy = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
